--- a/styles/_common.sass
+++ b/styles/_common.sass
@@ -7,3 +7,86 @@ a
   text-decoration: none
 textarea
   resize: none
+
+//Button's custom styles
+.under-btn
+  background-color: transparent
+  text-decoration: underline
+  color: $main-color-theme
+  text-transform: uppercase
+  font-weight: 700
+  &:hover
+    text-decoration: none
+
+////Header
+//Header-top
+.wm-header__top
+  border-bottom: 1px solid #e5e5e5
+.wm-buttons-link
+  display: inline-block
+  font-size: 12px
+  line-height: 16px
+  padding: 15px 20px
+  background-color: $main-color-theme
+  color: #ffffff
+  text-transform: uppercase
+  font-weight: 700
+  +border-bottom-radius(10px)
+.wm-buttons-callback
+  font-size: 12px
+  line-height: 16px
+.wm-contact-phone
+  display: inline-block
+  font-size: 26px
+  line-height: 30px
+  &::before
+    content: ''
+    display: inline-block
+    width: 20px
+    height: 20px
+    background: url("../images/phone_icon.png") no-repeat
+    margin-right: 10px
+.wm-contact-email
+  display: inline-block
+  line-height: 30px
+  &::before
+    content: ''
+    display: inline-block
+    width: 20px
+    height: 20px
+    background: url("../images/mail_icon.png") no-repeat
+    margin-right: 10px
+    position: relative
+    top: 6px
+.wm-navigation
+  li
+    display: block
+    text-align: center
+    padding: 3px 40px
+  li:last-child
+    border-right: none
+.wm-navigation__link
+  color: $color-base
+  font-size: 14px
+  line-height: 14px
+  text-transform: uppercase
+  &:hover
+    color: $main-color-theme
+
+//Header-bot
+.wm-header__bot
+  background: url("../images/uzor_doma.png")
+  border-top: 1px solid $main-color-theme
+  border-bottom: 1px solid $main-color-theme
+.wm-block-category
+  display: block
+  text-align: center
+  font-size: 12px
+  line-height: 14px
+  color: #ffffff
+  font-family: $verdana
+.wm-block-category__title
+  text-transform: uppercase
+  font-weight: 700
+
+//@media all and (min-width: 320px) and (max-width: 424px)
