--- a/styles/_common.sass
+++ b/styles/_common.sass
@@ -8,7 +8,93 @@ a
 textarea
   resize: none
 
-//Button's custom styles
+.main
+  margin: 0 auto
+  max-width: 1156px
+  padding: 0 10px
+.content-block
+  padding: 60px 0
+
+//Titles
+.main-title
+  font-size: 28px
+  line-height: 32px
+  text-transform: uppercase
+  color: $color-base
+  font-family: $verdana
+  font-weight: 400
+  margin-bottom: 50px
+.sub-title
+  font-size: 24px
+  line-height: 28px
+  color: #ffffff
+  text-transform: uppercase
+  text-align: center
+  font-family: $verdana
+  font-weight: 400
+  text-shadow: 1px 1px 2px rgba(51, 51, 51, 1)
+
+//Main-item
+.wm-main-item
+  display: block
+  width: 100%
+  max-width: 372px
+  min-width: 300px
+.wm-main-item__image
+  height: 100%
+  max-height: 200px
+  background-color: #eeeeee
+  img
+    width: 100%
+    height: 100%
+.wm-main-item__info
+  padding: 10px
+  background-color: #eeeeee
+  +transition(background-color 0.3s linear)
+.wm-main-item__name
+  font-size: 16px
+  color: $color-base
+  margin-bottom: 2px
+.wm-main-item__size
+  color: #999999
+  margin-bottom: 4px
+.wm-main-item__price
+  font-size: 18px
+  color: $main-color-theme
+  font-weight: 700
+.wm-main-item:hover
+  .wm-main-item__info
+    background-color: #cce1ba
+  .wm-main-item-name
+    text-decoration: underline
+
+//Button's & Input's custom styles
+.main-btn
+  display: inline-block
+  padding: 8px
+  background-color: $main-color-theme
+  text-transform: uppercase
+  color: #ffffff
+  font-size: 12px
+  font-weight: 700
+  border: 3px solid $main-color-theme
+  +border-radius(3px)
+  +transition(0.2s linear)
+  &:hover
+    background-color: #ffffff
+    color: $main-color-theme
+.sub-main
+  display: inline-block
+  padding: 13px 10px
+  border: 3px solid #ffffff
+  background-color: transparent
+  text-transform: uppercase
+  color: #ffffff
+  +border-radius(5px)
+  +transition(0.2s linear)
+  &:hover
+    background-color: #ffffff
+    color: $main-color-theme
 .under-btn
   background-color: transparent
   text-decoration: underline
@@ -17,8 +103,15 @@ textarea
   font-weight: 700
   &:hover
     text-decoration: none
-
-////Header
+.main-input
+  background-color: #ffffff
+  padding: 15px 10px
+  font-size: 14px
+  color: #999999
+  box-sizing: border-box
+  +border-radius(3px)
+  
+//----- Header -----
 //Header-top
 .wm-header__top
   border-bottom: 1px solid #e5e5e5
@@ -31,6 +124,7 @@ textarea
   color: #ffffff
   text-transform: uppercase
   font-weight: 700
+  margin-bottom: 15px
   +border-bottom-radius(10px)
 .wm-buttons-callback
   font-size: 12px
@@ -75,7 +169,8 @@ textarea
 
 //Header-bot
 .wm-header__bot
-  background: url("../images/uzor_doma.png")
+  background: url("../images/bg-green.png") no-repeat
+  background-size: cover
   border-top: 1px solid $main-color-theme
   border-bottom: 1px solid $main-color-theme
 .wm-block-category
@@ -85,8 +180,270 @@ textarea
   line-height: 14px
   color: #ffffff
   font-family: $verdana
+  margin: 10px 0
+.wm-block-category__image
+  margin-bottom: 15px
 .wm-block-category__title
   text-transform: uppercase
   font-weight: 700
+//----- End Header ------
 
-//@media all and (min-width: 320px) and (max-width: 424px)
+//----- Popular-projects -----
+.wm-popular-projects__title-wrap
+  +clearfix
+.wm-popular-projects__title
+  float: left
+.wm-popular-projects__link
+  float: right
+  line-height: 32px
+//----- End Popular-projects -----
+
+//----- Consulting -----
+.wm-consulting
+  background: url("../images/bg1.png") no-repeat center
+  background-size: cover
+.wm-consulting__title
+  margin-bottom: 60px
+.wm-consulting-form
+  text-align: center
+.wm-consulting-form__input
+  width: 275px
+  margin-right: 20px
+.wm-consulting-form__btn
+  padding: 13px 26px
+//----- End Consulting -----
+
+//----- Why-us -----
+.wm-why-us-block-item
+  margin-bottom: 50px
+.wm-why-us-block-item__image
+  width: 174px
+  height: 174px
+  margin: 0 auto 20px
+  background-color: #e5e5e5
+  +border-radius(50%)
+  +flexbox
+  +justify-content(center)
+  +align-items(center)
+.wm-why-us-block-item__title
+  margin: 0 auto
+  text-align: center
+  font-size: 12px
+  line-height: 18px
+  color: $color-base
+  font-weight: 700
+  text-transform: uppercase
+  width: 274px
+//----- End Why-us -----
+
+//----- Details -----
+.wm-details
+  background: url("../images/bg2.png") no-repeat center
+  background-size: cover
+.wm-details-block-item
+  background-color: #ffffff
+  padding: 20px
+  margin: 15px 0 30px 15px
+  position: relative
+  &::before
+    content: ''
+    position: absolute
+    top: -15px
+    left: 0
+    border-top: 15px solid $main-color-theme
+    width: calc(100% - 20px)
+  &::after
+    content: ''
+    position: absolute
+    top: -15px
+    left: -15px
+    border-left: 15px solid $main-color-theme
+    height: calc(100% - 5px)
+.wm-details-block-item__title
+  font-size: 24px
+  line-height: 32px
+  text-transform: uppercase
+  margin-bottom: 20px
+.wm-details-block-item__text
+  text-align: justify
+.wm-details-block-item__btn
+  text-align: right
+  margin-top: 20px
+.wm-details__info
+  text-align: center
+  font-size: 20px
+  line-height: 32px
+  color: #ffffff
+  text-shadow: 3px 3px 2px rgba(51, 51, 51, 1)
+.wm-phone
+  font-weight: 700
+.wm-phone__large
+  font-size: 28px
+//----- End Details -----
+
+//----- Seo -----
+.wm-seo
+  .main
+    max-width: 960px
+.wm-seo-wrap__video
+  margin-bottom: 60px
+  iframe
+    max-height: 540px
+.wm-seo-info__title
+  font-size: 22px
+  line-height: 26px
+  text-transform: uppercase
+  color: $color-base
+  font-family: $verdana
+  margin-bottom: 20px
+  font-weight: 400
+.wm-seo-info__text
+  line-height: 18px
+  text-align: justify
+.wm-seo-info__btn
+  margin-top: 30px
+  text-align: center
+//----- End Seo -----
+
+//----- Question -----
+.wm-question
+  background: url("../images/bg-green.png") no-repeat
+  background-size: cover
+.wm-question-block-photo
+  text-align: center
+.wm-question-photo__image
+  margin-bottom: 15px
+.wm-question-photo__phone
+  font-size: 20px
+  line-height: 32px
+  color: #ffffff
+  text-shadow: 1px 1px 2px rgba(51, 51, 51, 1)
+.wm-question-info__title
+  text-align: left
+.wm-question-info__sub-title
+  font-size: 20px
+  line-height: 28px
+  color: #ffffff
+  font-family: $verdana
+  margin-bottom: 30px
+  text-shadow: 1px 1px 2px rgba(51, 51, 51, 1)
+.wm-question-info-form-input
+  width: 274px
+  margin-right: 20px
+.wm-question-info-form__dispatch
+  color: #ffffff
+  text-align: right
+  text-shadow: 1px 1px 2px rgba(51, 51, 51, 1)
+//----- End Question -----
+
+//----- Footer -----
+.wm-footer
+  background: url("../images/uzor_footer.png") no-repeat center
+  background-size: cover
+  padding: 40px 0 30px
+.wm-footer-right
+  +clearfix
+.wm-footer-right__column
+  +clearfix
+.wm-footer-agreement
+  display: block
+  font-size: 12px
+  line-height: 16px
+  color: $color-base
+  text-align: center
+  text-decoration: underline
+.wm-footer-navigation__link
+  font-size: 12px
+  line-height: 18px
+  color: $color-base
+  text-transform: uppercase
+  &:hover
+    color: $main-color-theme
+.wm-footer-right__column
+  margin-bottom: 15px
+.wm-footer-navigation
+  width: 50%
+  float: left
+.wm-footer-block__left
+  color: $color-base
+.wm-footer-block-info
+  font-size: 12px
+  line-height: 18px
+  margin-bottom: 40px
+.wm-footer-block-copyright
+  font-size: 10px
+  line-height: 12px
+
+//----- End Footer -----
+
+//----- Media -----
+@media all and (min-width: 320px) and (max-width: 425px)
+  .content-block
+    padding: 20px 0
+  .main-title
+    margin-bottom: 30px
+    text-align: center
+  .wm-main-item
+    margin: 0 auto 10px
+  //Header
+  .wm-logo
+    text-align: center
+    margin: 10px 0
+  .wm-buttons
+    text-align: center
+    margin: 10px 0
+  .wm-contact
+    text-align: center
+    margin: 10px 0
+  .wm-navigation
+    margin: 10px 0
+  //Consulting
+  .wm-consulting__title
+    margin-bottom: 30px
+  .wm-consulting-form__input
+    margin-right: 0
+    margin-bottom: 20px
+  //Why-us
+  .wm-why-us-block-item
+    margin-bottom: 25px
+  .wm-why-us-block-item__image
+    margin-bottom: 10px
+  //Details
+  .wm-details__info .wm-phone__large
+    font-size: 24px
+  //Seo
+  .wm-seo-wrap__video
+    margin-bottom: 20px
+    iframe
+      max-height: 170px
+  //Question
+  .wm-question-info__title
+    text-align: center
+  .wm-question-block-photo
+    margin-bottom: 15px
+  .wm-question-photo__image
+    margin-bottom: 5px
+  .wm-question-info__title
+    margin-bottom: 10px
+  .wm-question-info__sub-title
+    margin-bottom: 10px
+    text-align: center
+  .wm-question-info-form__inputs
+    text-align: center
+  .wm-question-info-form-input
+    margin: 0 auto 10px
+  .wm-question-info-form-btn
+    margin-bottom: 10px
+  .wm-question-info-form__dispatch
+    text-align: center
+  //Footer
+  .wm-footer
+    padding: 30px 0 20px
+  .wm-footer-navigation
+    width: 40%
+    float: left
+    margin-left: 8%
+  .wm-footer-block-info
+    margin-bottom: 30px
+  .wm-footer-block-info
+    text-align: center
