--- a/styles/base/_mixin.sass
+++ b/styles/base/_mixin.sass
@@ -189,3 +189,11 @@
   -ms-flex-order: $order
   -webkit-order: $order
   order: $order
+
+@mixin justify-content($justify-content)
+  -webkit-justify-content: $justify-content
+  justify-content: $justify-content
+
+@mixin align-items($align-items)
+  -webkit-align-items: $align-items
+  align-items: $align-items
