--- a/styles/base/_mixin.sass
+++ b/styles/base/_mixin.sass
@@ -176,12 +176,19 @@
     -webkit-flex-direction: row
     flex-direction: row
 
+@mixin flex-wrap($flex-wrap)
+  -webkit-box-flex-wrap: $flex-wrap
+  -moz-box-flex-wrap:  $flex-wrap
+  -webkit-flex-wrap:  $flex-wrap
+  -ms-flex-wrap:  $flex-wrap
+  flex-wrap: $flex-wrap
+
 @mixin flex($flex)
   -webkit-box-flex: $flex
   -moz-box-flex:  $flex
   -webkit-flex:  $flex
   -ms-flex:  $flex
-  flex:  $flex
+  flex: $flex
 
 @mixin order($order)
   -webkit-box-ordinal-group: $order
